[metadata]
name = pyoxeconfgen
author = Alexandre Trentesaux
author-email = alexandre.trentesaux@al-enterprise.com
summary = Automation Tools for ALE OmniPCX Enterprise configuration
description-file = README.rst
classifier =
    Development Status :: 4 - Beta
        Environment :: Console
        Environment :: Debian
        Intended Audience :: Developers
        Intended Audience :: Information Technology
        Operating System :: OS Independent
        Programming Language :: Python

[files]
packages =
    pyoxeconfgen
data_files =
    etc/pyoxeconfgen = etc/*

[entry_points]
console_scripts =
    pyoxeconfgen_cli = pyoxeconfgen.__main__:main
